fix(style): adjust alignment of copy button for smaller code blocks

--- a/src/components/CodeBlockWithCopy/CodeBlockWithCopy.scss
+++ b/src/components/CodeBlockWithCopy/CodeBlockWithCopy.scss
@@ -25,7 +25,7 @@
 
 .copy-button {
   position: absolute;
-  top: 0.6rem;
+  top: 0.3rem;
   right: 0.5rem;
   z-index: 10;
 
